tests/support/validation/invalid/pattern_stop_without_node/patterns.pat
PAT;   26;002610020;Outbound  ; 5;261     ;1;1ou     ;Ashmont Station - Gallivan Blvd via Wash
TPS;507     ;mort  ;261     ;1;
PAT;9903 ;099030003;          ;  ;        ; ;  ;                                        ;9903
TPS;00009   ;arbor ;        ;X;
